# gallery2

./: .aiignore  README.md  pyproject.toml
devnotes/: hdrthumb.md
frontend/: index.ts  package.json  style.scss
gallery2/: acceptance_tests.py  admin.py  apps.py  files.py  models.py  test_edit_caption.py  test_scale_dimensions.py  tests.py  thumbnails.py  urls.py  utils.py  views.py
gallery2/management/commands/: buildgallery.py  import_images.py
gallery2/migrations/: 0001_initial.py  0002_add_timestamp_to_entry.py  0003_rename_filename_entry_basename_entry_filenames.py  0004_gallery_directory.py  0005_entry_hidden_alter_gallery_directory.py  0006_alter_entry_unique_together.py  0007_add_width_height_to_entry.py  0008_alter_entry_caption.py  0009_entry_mtimes.py  0010_entry_main_thumbnail_path.py  0011_entry_video_mtimes.py  0012_gallery_og_image_gallery_og_url.py
gallery2/publish_assets/css/: gallery.css
gallery2/publish_assets/js/: gallery.js
gallery2/templates/gallery2/: base.html  gallery_detail.html  gallery_form.html  gallery_list.html  gallery_publish.html
gallery2/templatetags/: gallery_extras.py
hdr/: README.md  hdr_jpg_thumb.py  hdr_jpg_thumb_test.py  sample-apple-image.heic
website/: common_settings.py  dev_settings.py  urls.py
website/frontend/templatetags/: frontend_extras.py
