[project]
name = ""
version = "0"
requires-python = ">=3.13"
dependencies = [
    "av>=14.4.0",
    "django>=5.2",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "python-dateutil>=2.9.0.post0",
    "uwsgi>=2.0.29",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.dev_settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]

[tool.black]
extend-exclude = "node_modules"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-debug-toolbar>=5.1.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
